--- a/app/views/trainers/index.html.erb
+++ b/app/views/trainers/index.html.erb
@@ -1,11 +1,12 @@
-<div class="container mt-5">
-  <h1 class="mb-4 text-center">Trainers</h1>
-  <table class="table table-bordered table-hover">
-    <thead class="table-dark">
+<div class="table-container">
+  <h1>Trainers</h1>
+  
+  <table class="table">
+    <thead>
       <tr>
         <th>Name</th>
         <th>Specialization</th>
-        <th>Phone</th>
+        <th>Email</th>
         <th>Actions</th>
       </tr>
     </thead>
@@ -14,8 +15,8 @@
         <tr>
           <td><%= trainer.name %></td>
           <td><%= trainer.specialization %></td>
-          <td><%= trainer.phone %></td>
-          <td>
+          <td><%= trainer.email %></td>
+          <td class="action-buttons">
             <%= link_to 'Show', trainer, class: 'btn btn-primary btn-sm' %>
             <%= link_to 'Edit', edit_trainer_path(trainer), class: 'btn btn-warning btn-sm' %>
             <%= link_to 'Delete', trainer, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm' %>
@@ -24,6 +25,9 @@
       <% end %>
     </tbody>
   </table>
-  <%= link_to 'New Trainer', new_trainer_path, class: 'btn btn-success mt-3' %>
+  
+  <div class="text-center">
+    <%= link_to 'New Trainer', new_trainer_path, class: 'btn btn-success' %>
+  </div>
 </div>
 
