--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: member) do |form| %>
   <% if member.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(member.errors.count, "error") %> prohibited this member from being saved:</h2>
+    <div class="alert alert-danger">
+      <h4><%= pluralize(member.errors.count, "error") %> prohibited this member from being saved:</h4>
 
       <ul>
         <% member.errors.each do |error| %>
@@ -11,32 +11,28 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+  <div class="mb-3">
+    <%= form.label :name, class: "form-label" %>
+    <%= form.text_field :name, class: "form-control" %>
+  </div>
+
+  <div class="mb-3">
+    <%= form.label :email, class: "form-label" %>
+    <%= form.email_field :email, class: "form-control" %>
+  </div>
+
+  <div class="mb-3">
+    <%= form.label :phone, class: "form-label" %>
+    <%= form.text_field :phone, class: "form-control" %>
+  </div>
+
+  <div class="mb-3">
+    <%= form.label :join_date, class: "form-label" %>
+    <%= form.date_field :join_date, class: "form-control" %>
   </div>
 
   <div>
-    <%= form.label :email, style: "display: block" %>
-    <%= form.text_field :email %>
-  </div>
-
-  <div>
-    <%= form.label :phone, style: "display: block" %>
-    <%= form.text_field :phone %>
-  </div>
-
-  <div>
-    <%= form.label :membership_type, style: "display: block" %>
-    <%= form.text_field :membership_type %>
-  </div>
-
-  <div>
-    <%= form.label :join_date, style: "display: block" %>
-    <%= form.date_field :join_date %>
-  </div>
-
-  <div>
-    <%= form.submit %>
+    <%= form.submit class: "btn btn-primary" %>
+    <%= link_to "Cancel", members_path, class: "btn btn-secondary" %>
   </div>
 <% end %>
