--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,5 +1,6 @@
-<div class="container mt-5">
-  <h1 class="mb-4 text-center">Members</h1>
+<div class="table-container">
+  <h1>Members</h1>
+  
   <div class="row">
     <% @members.each do |member| %>
       <div class="col-md-4">
@@ -22,5 +23,8 @@
       </div>
     <% end %>
   </div>
-  <%= link_to 'New Member', new_member_path, class: 'btn btn-success mt-3' %>
+  
+  <div class="text-center">
+    <%= link_to 'New Member', new_member_path, class: 'btn btn-success' %>
+  </div>
 </div>
